[gd_scene load_steps=12 format=3 uid="uid://bqd8t86a0yxwm"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_e2vvy"]
[ext_resource type="Texture2D" uid="uid://4oeans7ia5eh" path="res://assets/Sky_Background.png" id="1_wn3tm"]
[ext_resource type="PackedScene" uid="uid://cdadujk6ii068" path="res://scenes/sled.tscn" id="2_xdvtw"]
[ext_resource type="FontFile" uid="uid://dffaop5on2ipr" path="res://assets/04B_30__.TTF" id="3_j0qjh"]
[ext_resource type="Theme" uid="uid://cwkpyh0f7432o" path="res://scenes/ui/base_theme.tres" id="4_4m4ee"]
[ext_resource type="PackedScene" uid="uid://cgychfci4bssu" path="res://scenes/ui/settings.tscn" id="5_2tiiu"]
[ext_resource type="AudioStream" uid="uid://df1bqw0eacsu6" path="res://assets/ui/sounds/click_002.ogg" id="6_13xwu"]
[ext_resource type="AudioStream" uid="uid://oonqy0gn7cvq" path="res://assets/Christmas synths.ogg" id="7_6hi8d"]

[sub_resource type="Animation" id="Animation_8oeoh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/Title:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/Title2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SettingsButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/QuitButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yql04"]
resource_name = "title"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/Title:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/Title2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SettingsButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/QuitButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_tween"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1aab"]
_data = {
"RESET": SubResource("Animation_8oeoh"),
"title": SubResource("Animation_yql04")
}

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2vvy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_wn3tm")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_j0qjh")
theme_override_font_sizes/font_size = 22
text = "Santa! "
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Title2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_j0qjh")
theme_override_font_sizes/font_size = 22
text = "You Got To Save Christmas!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_4m4ee")
text = "Start"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_4m4ee")
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_4m4ee")
text = "Quit"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Settings" parent="MarginContainer/MarginContainer" instance=ExtResource("5_2tiiu")]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g1aab")
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_13xwu")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_6hi8d")
volume_db = -30.0
autoplay = true

[node name="Sled" parent="." instance=ExtResource("2_xdvtw")]
position = Vector2(-64, 48)

[node name="SkipCutscene" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CheckBox" type="CheckBox" parent="SkipCutscene"]
layout_mode = 0
offset_left = 4.0
offset_top = 156.0
offset_right = 123.0
offset_bottom = 180.0
theme = ExtResource("4_4m4ee")
theme_override_font_sizes/font_size = 9
text = "Skip Cutscene"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="SkipCutscene/CheckBox" to="." method="_on_check_box_toggled"]
